example_name  = keller_segel_ex4
check_SCRIPTS = run.sh
install_dir   = $(examples_install_path)/keller_segel/ex4
data          = keller_segel_ex4.C keller_segel_ex4.in run.sh
sources       = $(data) run.sh

CLEANFILES = out_*.gmv keller_segel_ex4.e

##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common
