example_name  = stokes_dg_01
check_SCRIPTS = run.sh
install_dir   = $(examples_install_path)/stokes_dg/stokes_dg_01
data          = stokes_dg_01.C run.sh stokes_dg_01.in
sources       = $(data) run.sh

CLEANFILES = out.e

##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common
