example_name  = stokes_dg_02
check_SCRIPTS = run.sh
install_dir   = $(examples_install_path)/stokes_dg/stokes_dg_02
data          = stokes_dg_02.C run.sh stokes_dg_02.in
sources       = $(data) run.sh

CLEANFILES = out.e

##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common
