example_name  = stokes_dg_03
check_SCRIPTS = run.sh
install_dir   = $(examples_install_path)/rrgalvan/stokes_dg_03
data          = stokes_dg_03.C run.sh
sources       = $(data) run.sh

CLEANFILES = out.e

##############################################
# include common example environment
include $(top_srcdir)/examples/Make.common
